# DelegateMQ

./: .gitignore  01_fetch_repos.py  02_build_libs.py  03_generate_samples.py  04_build_samples.py  05_run_samples.py  BuildAll.py  CLAUDE.md  CMakeLists.py  CMakeLists.txt  Config.cmake  DelegateConfig.cmake  Doxyfile  External.cmake  FindExternal.cmake  Predef.cmake  README.md  llms.txt
example/cellutron/: ARCHITECTURE.md  CELLUTRON.md  CMakeLists.txt  CONVENTIONS.md  README.md  run_cellutron.py
example/cellutron/controller/: CMakeLists.txt  DelegateMQConfig.h  main.cpp
example/cellutron/gui/: CMakeLists.txt  DelegateMQConfig.h  main.cpp
example/cellutron/safety/: CMakeLists.txt  DelegateMQConfig.h  main.cpp
example/sample-code/: ActiveObject.cpp  AllTargets.cpp  AsyncAPI.cpp  AsyncCallback.cpp  AsyncCallback.h  AsyncFuture.cpp  AsyncMethodInvocation.cpp  AsyncWorker.cpp  AsyncWorker.h  BindingProperty.cpp  CMakeLists.txt  Command.cpp  Coroutine.cpp  Coroutine.h  CountdownLatch.cpp  DataBus.cpp  DataBus.h  MessagePriority.cpp  MessagePriority.h  Observer.cpp  Proactor.cpp  ProducerConsumer.cpp  Reactor.cpp  RemoteCommunication.cpp  SafeTimer.cpp  SafeTimer.h  ScatterGather.cpp  ScatterGather.h  SignalSlot.cpp  SignalSlot.h  SignalSlotNoHeap.cpp  SignalSlotNoHeap.h  SysData.h  SysDataNoLock.cpp  SysDataNoLock.h
example/sample-interop/cpp-server/: CMakeLists.txt
example/sample-projects/atfe-armv7m-bare-metal/: CMakeLists.txt  README.md  main.cpp
example/sample-projects/bare-metal/: CMakeLists.txt  main.cpp
example/sample-projects/bare-metal-arm/: CMakeLists.txt  README.md  flash.ld  main.cpp  retarget.c  startup.c
example/sample-projects/clang-native/: CMakeLists.txt  README.md  main.cpp
example/sample-projects/freertos-bare-metal/: CMakeLists.txt  FreeRTOSConfig.h  README.md  Task._cc  Task._hh  main.c  main_delegate.cpp
example/sample-projects/nnq-bitsery/: CMakeLists.txt  data.h  main.cpp  receiver.h  sender.h
example/sample-projects/serialport-serializer/: CMakeLists.txt  README.md  main.cpp  receiver.h  sender.h
example/sample-projects/win32-pipe-serializer/: CMakeLists.txt  data.h  main.cpp  receiver.h  sender.h
example/sample-projects/zeromq-msgpack-cpp/: CMakeLists.txt  data.h  main.cpp  receiver.h  sender.h
example/sample-projects/zeromq-rapidjson/: CMakeLists.txt  data.h  main.cpp  receiver.h  sender.h
example/sample-projects/zeromq-serializer/: CMakeLists.txt  data.cpp  data.h  main.cpp  receiver.h  sender.h
examples/: CMakeLists.txt
examples/sample-code/: ActiveObject.cpp  ActiveObject.h  AllTargets.cpp  AsyncAPI.cpp  AsyncFuture.cpp  AsyncMethodInvocation.cpp  AsyncMethodInvocation.h  BindingProperty.cpp  BindingProperty.h  Command.h  Observer.h  Proactor.cpp  ProducerConsumer.cpp  Reactor.cpp  Reactor.h  RemoteCommunication.cpp  RemoteCommunication.h  SysDataNoLock.cpp
examples/sample-projects/: EXAMPLES.md
examples/sample-projects/bare-metal/: CMakeLists.txt  main.cpp
examples/sample-projects/bare_metal/: CMakeLists.txt  main.cpp
examples/sample-projects/zeromq-msgpack-cpp/: receiver.h
examples/sample-projects/zeromq_msgpack_cpp/: CMakeLists.txt  receiver.h  sender.h
examples/sample-projects/zeromq_serializer/: CMakeLists.txt  data.h  receiver.h  sender.h
examples/sample_code/: ActiveObject.cpp  AllTargets.h  AsyncAPI.cpp  AsyncFuture.cpp  AsyncMethodInvocation.cpp  BindingProperty.cpp  CMakeLists.txt  Command.cpp  CountdownLatch.cpp  CountdownLatch.h  ProducerConsumer.cpp  Reactor.cpp  RemoteCommunication.cpp
examples/sample_projects/: EXAMPLES.md
examples/sample_projects/bare_metal/: CMakeLists.txt  main.cpp
examples/sample_projects/zero_mq/: CMakeLists.txt  data.cpp  data.h  main.cpp  receiver.h  sender.h  serializer.h  transport_zeromq.h
examples/sample_projects/zero_mq_serializer/: CMakeLists.txt  data.cpp  dispatcher.h  receiver.h  serialize.h  serializer.h
examples/sample_projects/zeromq/: CMakeLists.txt  dispatcher.h  receiver.h  sender.h  serializer.h  transport.h
examples/sample_projects/zeromq_msgpack_cpp/: CMakeLists.txt  data.h  dispatcher.h  sender.h  serializer.h
examples/sample_projects/zeromq_serializer/: CMakeLists.txt  data.h  receiver.h  sender.h  serialize.h  serializer.h  transport_zeromq.h
interop/native/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Allocator/: CMakeLists.txt
src/Delegate/: DelegateAsync.h  DelegateAsyncWait.h  DelegateLib.h  DelegateMsg.h  DelegateRemote.h  IDispatcher.h  IInvoker.h  ISerializer.h  IThread.h  make_tuple_heap.h
src/Examples/: AllTargets.cpp  AllTargets.h  AsyncAPI.cpp  AsyncAPI.h  AsyncFuture.cpp  AsyncFuture.h  CountdownLatch.cpp  Observer.cpp  Proactor.cpp  Proactor.h  ProducerConsumer.h  RemoteCommunication.cpp
src/Port/: WorkerThreadStd.cpp  WorkerThreadStd.h
src/delegate/: DelegateRemote.h  IDispatcher.h
src/delegate-mq/: Defaults.cmake  DelegateLib.cpp  DelegateLib.h  DelegateMQ.cmake  DelegateMQ.h  External.cmake  Macros.cmake  Predef.cmake
src/delegate-mq/delegate/: Delegate.h  DelegateAsync.h  DelegateAsyncWait.h  DelegateMsg.h  DelegateOpt.h  DelegateRemote.h  IDispatcher.h  IInvoker.h  ISerializer.h  IThread.h  MulticastDelegate.h  (+7 more)
src/delegate2/: DelegateAsyncWait.h
src/port/: AsyncInvoke.h
src/port2/: CMakeLists.txt  ThreadMsg.h
test/: CMakeLists.txt  main.cpp  main.h  main_stress.cpp  stress_test.cpp  stress_test_databus.cpp  stress_test_remote.cpp
test/unit-tests/: CMakeLists.txt  ContainersTests.cpp  Containers_UT.cpp  DelegateAsyncTests.cpp  DelegateAsyncWaitTests.cpp  DelegateAsyncWait_UT.cpp  DelegateAsync_UT.cpp  DelegateRemoteTests.cpp  DelegateRemote_UT.cpp  DelegateTests.cpp  DelegateThreadsTests.cpp  DelegateThreads_UT.cpp  DelegateUnitTests.cpp  Delegate_UT.cpp  RemoteChannelTests.cpp  RemoteChannel_UT.cpp  TimerDelegateTests.cpp  UnitTestCommon.h
tools/: CMakeLists.txt  TOOLS.md
tools/bridge/: NodeBridge.cpp  NodeBridge.h  NodeInfoPacket.h  SpyBridge.cpp  SpyBridge.h
tools/monitor/: monitor_main.cpp
tools/spy/: main.cpp
tools/src/: UdpSocket.h
tools/thread/: thread_main.cpp
(+2324 files in other folders)
